tdf#107126 sw: fix layout crash with section in footnote

SwContentFrame::WouldFit_() contains a hack to temporarily reparent a
SwTextFrame.  In the bugdoc, there is a SwTextFrame below a
SwSectionFrame below a SwFootnoteFrame.  The reparenting ignores the
SwSectionFrame so the result is a SwTextFrame below SwFootnoteFrame, but
it still has its mbInfSct set, hence crashes with a null pointer.

If the SwTextFrame is permanently moved later on, in
SwFlowFrame::MoveBwd() line 2450 a new SwSectionFrame is created.

Change-Id: I45a7ab793b4459e551bd11b7fb83dedc58a6c8da
(cherry picked from commit 4d43f9e9dda5edeeb6e4b99487b5b6a1fae4bd56)
Reviewed-on: https://gerrit.libreoffice.org/37004
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 0ae68775afc6227afb881e28c1b2045b3030ad53)
Reviewed-on: https://gerrit.libreoffice.org/37056
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>